# book-collector

./: CMakeLists.txt  README.md  todo.org
src/: book.cpp  book.hpp  curses.cpp  curses.hpp  filehandler.cpp  filehandler.hpp  library.cpp  library.hpp  main.cpp
src/book/: book.cpp  book.hpp  library.cpp  library.hpp
src/data/: filehandler.cpp  filehandler.hpp
src/test/: testingcurses.cpp  testingsort.cpp
